# food-chatbot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  my_pipeline  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
food_chatbot/: __main__.py
food_chatbot/components/: Llm.py  QueryBuilder.py  Retriever.py  __init__.py  llm.py  retriever.py
food_chatbot/prompts/: __init__.py  query_builder.py
food_chatbot/tools/: __init__.py  find_recipe_by_ingredients.py  get_recipe_details.py  get_weather.py  rag_pipeline_func.py
src/: main.py
src/tools/: __init__.py  get_current_weather.py  rag_pipeline_func.py
