[tool.poetry]
name = "food-chatbot"
version = "0.1.2"
description = ""
authors = ["sebhoron <92864754+sebhoron@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^4.42.0"
haystack-ai = "^2.4.0"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
mongodb-atlas-haystack = "^0.4.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
pylint = "^3.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
